<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="false"
    android:orientation="vertical"
    android:weightSum="1">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/albumArtLayout"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="0.7">

            <LinearLayout
                android:id="@+id/albumArtTNLayout"
                android:layout_width="54dp"
                android:layout_height="54dp"
                android:orientation="vertical"
                android:background="#d9c6c6"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="15dp">

                <ImageView
                    android:id="@+id/albumArtThumbnail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/trackInfoBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:baselineAligned="false"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/titleBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/track_title"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="18sp"
                    android:typeface="sans"
                    android:maxLines="1"
                    android:ellipsize="end" />

                <TextView
                    android:id="@+id/artistBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:ellipsize="end"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/albumBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/album_name"
                    android:textColor="#000000"
                    android:textIsSelectable="false"
                    android:textSize="12sp"
                    android:typeface="sans"
                    android:maxLines="1"
                    android:ellipsize="end" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:text="@string/playing_from"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="#000000"
                android:textSize="18sp"
                android:typeface="sans" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:width="7dp" />

            <TextView
                android:id="@+id/playingFrom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/music_library"
                android:textColor="#000000"
                android:maxLines="1"
                android:textSize="18sp"
                android:typeface="sans" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/albumArtLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintRight_toRightOf="@+id/linearLayout"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/linearLayout">

        <ImageView
            android:id="@+id/albumArt"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#ffffff"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:id="@+id/linearLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/songProgressBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:splitTrack="false"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:thumbPosition="midpoint"
                android:maxHeight="5dp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <TextView
                android:id="@+id/timeElapsed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text="@string/time_zero"
                android:textColor="#000000"
                android:layout_weight="0" />

            <TextView
                android:id="@+id/filler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start|center_vertical"
                android:text=""
                android:layout_weight="1" />

            <TextView
                android:id="@+id/trackDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end|center_vertical"
                android:text="@string/time_zero"
                android:textColor="#000000"
                android:layout_weight="0" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center_vertical">

            <ImageButton
                android:id="@+id/repeatButton"
                android:src="@drawable/ic_repeat_black_18dp"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.20" />

            <ImageButton
                android:id="@+id/previousButton"
                android:src="@drawable/previous_button"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|start"
                android:layout_weight="0.20" />

            <ImageButton
                android:id="@+id/playButton"
                android:src="@drawable/play_button"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.20" />

            <ImageButton
                android:id="@+id/nextButton"
                android:src="@drawable/next_button"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|end"
                android:layout_weight="0.20" />

            <ImageButton
                android:id="@+id/shuffleButton"
                android:src="@drawable/ic_shuffle_black_18dp"
                android:background="@null"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.20" />

        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>